--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "gulp": "^3.9.1",
     "gulp-bro": "^1.0.2",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-css-spriter": "^0.3.3",
     "gulp-file-include": "^1.0.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.3.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
+    "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11"
