--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.1",
     "gulp-bro": "^1.0.2",
     "gulp-cache": "^0.4.6",
+    "gulp-changed": "^3.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-css-spriter": "^0.3.3",
