--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "gulp-d1",
+  "name": "automation-development",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": ">  本项目是基于GULP实现前后端模版",
+  "main": "gulpfile.js",
   "scripts": {
-    "dev": "gulp"
+    "dev": "gulp dev --env development",
+    "build": "gulp  --env production"
   },
-  "browser": {
-    "jquery": "./src/js/common/jquery.js"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ws880321/automation-development.git"
   },
-  "browserify-shim": {
-    "jquery": "$"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.18.12",
-    "browserify": "^14.4.0",
+  "bugs": {
+    "url": "https://github.com/ws880321/automation-development/issues"
+  },
+  "homepage": "https://github.com/ws880321/automation-development#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.18.13",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-bro": "^1.0.2",
-    "gulp-cache": "^0.4.6",
+    "gulp-babel": "^7.0.0",
     "gulp-changed": "^3.1.1",
-    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
-    "gulp-css-spriter": "^0.3.3",
-    "gulp-file-include": "^1.0.0",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-less": "^3.3.0",
+    "gulp-html-extend": "^1.1.6",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-less": "^3.3.2",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-watch": "^4.3.11",
-    "imagemin-pngquant": "^5.0.1"
+    "gulp-rev": "^8.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
+    "uglify-js": "^3.1.8"
   },
-  "dependencies": {
-    "browserify-shim": "^3.8.14",
-    "gulp.spritesmith": "^6.5.1",
-    "jquery": "^3.2.1"
+  "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
+    "gulp-notify": "^3.0.0",
+    "gulp-rev-collector": "^1.2.2",
+    "minimist": "^1.2.0",
+    "through": "^2.3.8"
   }
 }
